--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "formatter": "pnpm biome format --write ./src"
+    "formatter": "pnpm biome format --write ./src",
+    "lintter": "pnpm biome lint ./src"
   },
   "dependencies": {
     "next": "14.2.1",
