[Edit] Confirm connected API server but http only

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --experimental-https --experimental-https-key ../certificates/localhost-key.pem --experimental-https-cert ../certificates/localhost.pem",
+    "dev-http": "next dev",
     "build": "next build",
     "start": "next start",
     "formatter": "pnpm biome format --write ./src",
