--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "safe-fixed": "pnpm biome check --apply ./src"
   },
   "dependencies": {
+    "daisyui": "^4.10.1",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18"
