--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "daisyui": "^4.10.1",
     "next": "14.2.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.3"
   },
   "devDependencies": {
     "@biomejs/biome": "1.6.4",
