--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.3"
+    "react-hook-form": "^7.51.3",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@biomejs/biome": "1.6.4",
