--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@biomejs/biome": "1.6.4",
